--- a/nginx.config
+++ b/nginx.config
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name fron-api.onrender.com;  # Замени на домен фронтенда
 
     root /usr/share/nginx/html;
     index login.html;
@@ -15,6 +15,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        add_header Access-Control-Allow-Origin *;
+        # Убери или замени Access-Control-Allow-Origin
+        # add_header Access-Control-Allow-Origin *;  # Удали это
+        proxy_set_header Access-Control-Allow-Origin $http_origin;  # Тест
+        proxy_set_header Access-Control-Allow-Credentials true;    # Добавь для cookies
     }
 }
